gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21927.d
version https://git-lfs.github.com/spec/v1
oid sha256:d9dc46380b5f74c5766e473da64326e9ce389c84a0cabb8d31593481f7aefbbb
size 474
